--- a/config.org
+++ b/config.org
@@ -272,10 +272,14 @@ Write cleaner keybindings and mappings.
         ivy-virtual-abbreviate 'abbreviate
         uniquify-buffer-name-style 'post-forward-angle-brackets
         uniquify-min-dir-content 2))
+
 (use-package counsel
   :config
   (counsel-mode))
-(use-package swiper)
+
+(use-package swiper
+  :config
+  (setq swiper-goto-start-of-match t))
 #+end_src
 
 Disable searching with caret when using ~ivy~.
@@ -768,7 +772,6 @@ Allows for smart editing with HTML files (smarter indentation for embedded CSS a
 Implements language server for markup documents (LaTeX, markdown, Org, etc.)
 
 #+begin_src emacs-lisp
-(use-package ltex-ls)
 #+end_src
 
 ** LSP / Autocomplete
@@ -967,6 +970,17 @@ Automatically indent on newline.
 (evil-define-key 'insert 'global (kbd "C-e") 'end-of-text-or-line)
 (evil-define-key 'insert 'global (kbd "C-n") 'next-line)
 (evil-define-key 'insert 'global (kbd "C-p") 'previous-line)
+(evil-define-key 'insert 'global (kbd "C-k") 'kill-line)
+
+(evil-define-key '(normal visual)
+  'global
+  (kbd "/")
+  'swiper)
+
+(evil-define-key '(normal visual)
+  'global
+  (kbd "?")
+  'swiper-backward)
 
 (evil-define-key 'insert
   'global
