readme page, updated documentation for functions.el

--- a/config.org
+++ b/config.org
@@ -1,4 +1,5 @@
 #+TITLE: HumanoidSandvichDispenser's Emacs Configuration
+#+AUTHOR: HumanoidSandvichDispenser
 #+PROPERTY: header-args :tangle yes :results silent
 #+STARTUP: indent inlineimages content
 
