--- a/config.org
+++ b/config.org
@@ -268,7 +268,8 @@ Write cleaner keybindings and mappings.
   :config
   (ivy-mode)
   (setq ivy-re-builders-alist
-        '((t . ivy--regex-ignore-order))
+        '((swiper . regexp-quote)
+          (t . ivy--regex-ignore-order))
         ivy-virtual-abbreviate 'abbreviate
         uniquify-buffer-name-style 'post-forward-angle-brackets
         uniquify-min-dir-content 2))
@@ -812,6 +813,9 @@ Yet Another Snippet template system for Emacs.
 #+begin_src emacs-lisp
 (use-package yasnippet
   :config
+  (yas-snippet-dirs '((expand-file-name
+                      "snippets"
+                      user-emacs-directory)))
   (yas-global-mode t))
 #+end_src
 
